--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="webaruhaz/">Webáruház</a>
+        <a class="nav-link" href="webaruhaz_km/">Webáruház</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Keresés</a>
