--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="webaruhaz_km/">Webáruház</a>
+        <a class="nav-link" href="webaruhaz">Webáruház</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Keresés</a>
@@ -89,7 +89,6 @@
   <h2>Segédletek:</h2>
   <p>(Tankönyvek, jegyzetek, videók.)</p>
   <table class="table">
-      <thead>
           <tr>
               <td>1</td>
               <td>Szabványkövető statikus honlapok szerkesztése HTML5 + CSS3 + SVG 2</td>
@@ -154,7 +153,6 @@
           </tr>
 
 
-          </tbody>
   </table>
   <p>&nbsp;</p>
 </div>
